# esp32-p4-edge-classifier

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  ui_mockup.html
components/espressif__esp32_p4_function_ev_board/: esp32_p4_function_ev_board.c
main/: CMakeLists.txt  app_main.c  idf_component.yml
main/app/: audio_event_app.c  audio_event_app.h  display_app.c  display_app.h
main/driver/audio/: es8311.c  es8311.h
main/driver/display/: dsi_lcd.c  dsi_lcd.h
main/driver/sensor/: sc2336_camera.c  sc2336_camera.h
main/driver/touch/: gt911.c  gt911.h
main/hal/: audio_hal.c  audio_hal.h  camera_hal.c  camera_hal.h  display_hal.c  display_hal.h  mic_hal.c  mic_hal.h  touch_hal.c  touch_hal.h
main/lvgl_port/: lvgl_port.c  lvgl_port.h
main/lvgl_port/ui/: ui_emotion.c  ui_emotion.h  ui_log.c  ui_main.c  ui_notify.c  ui_notify.h  ui_settings.c  ui_theme.c  ui_theme.h
main/runtime/: task_config.h
main/service/: app_config_service.c  app_config_service.h  app_state.c  app_state.h  audio_classify_service.c  audio_classify_service.h  audio_frame_bus.c  audio_frame_bus.h  audio_types.h  camera_service.c  camera_service.h  event_service.c  event_service.h  telemetry_service.c  telemetry_service.h  visual_classify_service.c  visual_classify_service.h
main/tasks/: audio_capture_task.c  audio_capture_task.h  audio_inference_task.c  audio_inference_task.h  ui_task.c  ui_task.h
models/: pruned_keep14_v2.espdl  pruned_keep14_v2.info  pruned_keep14_v2.json
scripts/: espdl_to_carray.sh  quantize_pruned.py
tools/: re_quantize.py
